 platforms-module.h        Locally Added               0 
 hybrid-llpi.awb           Locally Modified           92 
 platforms-module.cpp      Locally Added               0 

Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/front-panel/hybrid
 hybrid-fp-sw.cpp          Locally Modified           92 

Directory modules/bluespec/common/fpgaenv/virtual-platform/virtual-devices/memory/hybrid
 hybrid-memory-sw.cpp      Locally Modified           92 

Directory modules/bluespec/common/fpgaenv/physical-platform/physical-devices/unix-pipe
 unix-pipe-device.cpp      Locally Modified           92 


* Updated global args. 

* Moved platform-modules to low-level-platform interface until it can become a
library.

Michael P.



----------
pellauer    Date: Mon Apr 14 15:02:20 EDT 2008  CSN: CSN-platforms-94
                  Mon Apr 14 19:02:20 UTC 2008


Directory modules/bluespec/common/fpgaenv/virtual-platform/rrr/basic
 basic-rrr-common.bsh      Locally Modified           93 


Added UINT64 to rrr-common.


----------
mcadler     Date: Mon Apr 14 21:10:03 EDT 2008  CSN: CSN-platforms-95
                  Tue Apr 15 01:10:03 UTC 2008


Directory config/pm/hasim/submodels/fpgaenv
 hasim-fpgaenv-hybrid-m5-alpha-sim.apm Locally Added               0 

Directory admin/packages
 platforms                 Locally Modified           94 

Directory modules/bluespec/common/fpgaenv/virtual-platform
 m5-virtual-platform.awb   Locally Added               0 
 std-virtual-platform.h    Locally Added               0 
 std-virtual-platform.awb  Locally Modified           94 
 fast-virtual-platform.awb Locally Modified           94 
 m5-virtual-platform.h     Locally Added               0 

- Define a virtual platform that includes m5.
- All virtual platforms now have a VIRTUAL_PLATFORM class with a constructor
  that takes a subset of the command line parameters.  m5 needs this.
  The std-virtual-platform.h class does nothing.