@@ -6,5 +6,5 @@ Lock=asim-platforms
 Description=Description of platforms
 Name=platforms
 Tag=HEAD
-CSN=CSN-platforms-95
+CSN=CSN-platforms-96
 Dependencies=hasim/HEAD
